@@ -2,8 +2,10 @@ package com.sparta.plate.service.order;
 
 import com.sparta.plate.dto.request.OrderProductRequestDto;
 import com.sparta.plate.dto.request.OrderRequestDto;
+import com.sparta.plate.dto.response.OrderProductResponseDto;
 import com.sparta.plate.dto.response.OrderResponseDto;
 import com.sparta.plate.entity.*;
+import com.sparta.plate.exception.*;
 import com.sparta.plate.repository.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -16,10 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 import static com.sparta.plate.entity.OrderStatusEnum.PENDING_PAYMENT;
 
@@ -33,9 +32,13 @@ public class OrderService {
     private final UserRepository userRepository;
     private final StoreRepository storeRepository;
     private final ProductRepository productRepository;
+    private final ProductHistoryRepository productHistoryRepository;
 
     @Transactional
     public UUID createOrder(OrderRequestDto requestDto, Long userId) {
+        OrderTypeEnum.fromString(requestDto.getOrderType());
+        OrderStatusEnum.fromString(requestDto.getOrderStatus());
+
         UUID orderId = UUID.randomUUID();
         while (orderRepository.existsById(orderId)) {
             orderId = UUID.randomUUID();
@@ -43,19 +46,34 @@ public class OrderService {
 
         // User 객체 조회
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("User not found with ID: " + requestDto.getUserId()));
+                .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + requestDto.getUserId()));
 
         // Store 객체 조회
         Store store = storeRepository.findById(requestDto.getStoreId())
-                .orElseThrow(() -> new IllegalArgumentException("Store not found with ID: " + requestDto.getStoreId()));
+                .orElseThrow(() -> new StoreNotFoundException("Store not found with ID: " + requestDto.getStoreId()));
 
         // DTO에서 Entity로 변환
         Order order = requestDto.toEntity(user, store);
         order.setOrderId(orderId);
 
-        order.setOrderProductList(requestDto.getOrderProductList().stream()
-                .map(dto -> createOrderProduct(dto, order))
-                .toList());
+        // OrderProduct 중복 합산 처리
+        Map<UUID, OrderProduct> productMap = new HashMap<>();
+        for (OrderProductRequestDto dto : requestDto.getOrderProductList()) {
+            OrderProduct orderProduct = createOrderProduct(dto, order);
+            UUID productId = orderProduct.getProduct().getId();
+
+            if (productMap.containsKey(productId)) {
+                // 중복된 상품이 있으면 수량을 합산
+                OrderProduct existingProduct = productMap.get(productId);
+                existingProduct.setOrderQuantity(existingProduct.getOrderQuantity() + orderProduct.getOrderQuantity());
+            } else {
+                // 새로운 상품이면 Map에 추가
+                productMap.put(productId, orderProduct);
+            }
+        }
+
+        // Map의 값들을 List로 변환하여 Order에 설정
+        order.setOrderProductList(new ArrayList<>(productMap.values()));
 
         // 총 가격 계산
         order.calculateTotalPrice();
@@ -65,21 +83,31 @@ public class OrderService {
     }
 
     @Transactional
-    public void updateOrder(UUID orderId, OrderRequestDto requestDto, User user) {
+    public void updateOrder(UUID orderId, UUID storeId, OrderRequestDto requestDto, User user) {
 
+        OrderTypeEnum.fromString(requestDto.getOrderType());
         Order order;
 
         switch(user.getRole()){
             case CUSTOMER -> order = orderRepository.findByUserIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalseAndOrderStatus(user.getId(), orderId, PENDING_PAYMENT)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
 
-            case OWNER -> order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalseAndOrderStatus(user.getStore().getId(), orderId, PENDING_PAYMENT)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+            case OWNER -> {
+
+                if (!user.getStore().getId().equals(storeId)) {
+                    throw new UnAuthorizedException("User does not have access to this store.");
+                }
+
+                // storeId가 일치하는 경우에만 주문 조회
+                order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalseAndOrderStatus(storeId, orderId, PENDING_PAYMENT)
+                        .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
+
+            }
 
             case MASTER, MANAGER -> order = orderRepository.findByOrderIdAndIsDeletedFalseAndIsCanceledFalseAndOrderStatus(orderId, PENDING_PAYMENT)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
 
-            default -> throw new IllegalArgumentException("User role not recognized");
+            default -> throw new UserNotAuthorizedException("User role not recognized");
         }
 
         if(requestDto.getOrderType() != null) {
@@ -104,7 +132,7 @@ public class OrderService {
                     case CREATE:
 
                         if (existingProductOpt.isPresent()) {
-                            throw new IllegalArgumentException("Product with ID " + dto.getProductId() + " is already in the order.");
+                            throw new DuplicateOrderProductException(dto.getProductId());
                         } else {
                             // Create a new OrderProduct and add to the list
                             OrderProduct newProduct = createOrderProduct(dto, order);
@@ -117,11 +145,10 @@ public class OrderService {
                             OrderProduct productToDelete = existingProductOpt.get();
                             order.getOrderProductList().remove(productToDelete);
                             productToDelete.resetProductStockQuantity();
-                            System.out.println(productToDelete.getOrderProductId());
                             orderProductRepository.delete(productToDelete);
 
                         } else {
-                            throw new IllegalArgumentException("OrderProduct not found with id: " + dto.getOrderProductId());
+                            throw new OrderProductNotFoundException("OrderProduct not found with ID : " + dto.getOrderProductId());
                         }
                         break;
 
@@ -135,12 +162,12 @@ public class OrderService {
                                 productToUpdate.setProductStockQuantity();
                             }
                         } else {
-                            throw new IllegalArgumentException("OrderProduct not found with id: " + dto.getOrderProductId());
+                            throw new OrderProductNotFoundException("OrderProduct not found with ID : " + dto.getOrderProductId());
                         }
                         break;
 
                     default:
-                         throw new IllegalArgumentException("Invalid flag status");
+                        throw new IllegalArgumentException("Invalid flag status : " + FlagStatusEnum.valueOf(dto.getFlagStatus()));
                 }
             }
         }
@@ -149,76 +176,123 @@ public class OrderService {
     }
 
     @Transactional
-    public OrderResponseDto getOrder(UUID orderId, User user) {
+    public OrderResponseDto getOrder(UUID orderId, UUID storeId, User user) {
 
         Order order;
 
         switch(user.getRole()){
             case CUSTOMER -> order = orderRepository.findByUserIdAndOrderIdAndIsDeletedFalse(user.getId(), orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
 
-            case OWNER -> order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalse(user.getStore().getId(), orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+            case OWNER -> {
+
+                if (!user.getStore().getId().equals(storeId)) {
+                    throw new UnAuthorizedException("User does not have access to this store.");
+                }
+
+                order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalse(storeId, orderId)
+                        .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
+            }
 
             case MASTER, MANAGER -> order = orderRepository.findByOrderIdAndIsDeletedFalse(orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found with ID : " + orderId));
 
-            default -> throw new IllegalArgumentException("User role not recognized");
-
+            default -> throw new UserNotAuthorizedException("User role not recognized");
         }
 
-        return OrderResponseDto.fromEntity(order);
+        // 각 OrderProduct의 productHistoryId를 통해 ProductHistory 정보를 조회하여 DTO 생성
+        List<OrderProductResponseDto> orderProductResponseDtoList = order.getOrderProductList().stream()
+                .map(orderProduct -> {
+                    ProductHistory productHistory = productHistoryRepository.findById(orderProduct.getProductHistoryId())
+                            .orElseThrow(() -> new ProductHistoryNotFoundException("Product history not found"));
+                    return new OrderProductResponseDto(orderProduct, productHistory);
+                })
+                .toList();
+
+
+        return OrderResponseDto.fromEntity(order, orderProductResponseDtoList);
     }
 
     @Transactional
-    public Page<OrderResponseDto> getOrderList(String orderStatus, LocalDate orderDateFrom, LocalDate orderDateTo, Pageable pageable, User user) {
+    public Page<OrderResponseDto> getOrderList(UUID storeId, String orderStatus, LocalDate orderDateFrom, LocalDate orderDateTo, Pageable pageable, User user) {
 
         Page<Order> orderList;
 
-        switch(user.getRole()){
-            case CUSTOMER -> orderList = orderRepository.findByUserOrdersWithProductList(user.getId(), OrderStatusEnum.valueOf(orderStatus), orderDateFrom, orderDateTo, pageable);
+        switch(user.getRole()) {
+            case CUSTOMER ->
+                    orderList = orderRepository.findByUserOrdersWithProductList(user.getId(), OrderStatusEnum.valueOf(orderStatus), orderDateFrom, orderDateTo, pageable);
 
-            case OWNER -> orderList = orderRepository.findByStoreOrdersWithProductList(user.getStore().getId(), OrderStatusEnum.valueOf(orderStatus), orderDateFrom, orderDateTo, pageable);
+            case OWNER -> {
 
+                if (!user.getStore().getId().equals(storeId)) {
+                    throw new UnAuthorizedException("User does not have access to this store.");
+                }
+                orderList = orderRepository.findByStoreOrdersWithProductList(storeId, OrderStatusEnum.valueOf(orderStatus), orderDateFrom, orderDateTo, pageable);
+            }
             case MASTER, MANAGER-> orderList = orderRepository.findByOrdersWithProductList(OrderStatusEnum.valueOf(orderStatus), orderDateFrom, orderDateTo, pageable);
 
-            default -> throw new IllegalArgumentException("User role not recognized");
+            default -> throw new UserNotAuthorizedException("User role not recognized");
         }
 
         if (orderList.isEmpty()) {
-            throw new IllegalArgumentException("Order not found");
+            throw new OrderNotFoundException("Order not found");
         }
         List<OrderResponseDto> orderResponseDtoList = orderList.stream()
-                                                                .map(OrderResponseDto::fromEntity)
-                                                                .collect(Collectors.toList());
+                .map(order -> {
+                    List<OrderProductResponseDto> orderProductResponseDtoList = order.getOrderProductList().stream()
+                            .map(orderProduct -> {
+                                ProductHistory productHistory = productHistoryRepository.findById(orderProduct.getProductHistoryId())
+                                        .orElseThrow(() -> new ProductHistoryNotFoundException("Product history not found"));
+                                return new OrderProductResponseDto(orderProduct, productHistory);
+                            })
+                            .toList();
+
+                    return OrderResponseDto.fromEntity(order, orderProductResponseDtoList);
+                })
+                .toList();
+
         return new PageImpl<>(orderResponseDtoList, pageable, orderList.getTotalElements());
     }
 
     @Transactional
     public void deleteOrder(UUID orderId, Long userId) {
         Order order = orderRepository.findByOrderIdAndIsDeletedFalse(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Order not found or already deleted"));
+                .orElseThrow(() -> new OrderNotFoundException("Order not found or already deleted"));
+
+        // 주문 상태가 취소 또는 완료일 때만 삭제 가능하도록 조건 추가
+        if (order.getOrderStatus() != OrderStatusEnum.ORDER_CANCELLED && order.getOrderStatus() != OrderStatusEnum.DELIVERY_COMPLETED) {
+            throw new OrderNotFoundException("Order not found with status 'ORDER_CANCELLED' or 'DELIVER_COMPLETED'");
+        }
+
         order.setIsDeleted(true);
         order.markAsDeleted(userId);
         orderRepository.save(order);
     }
 
+
+
     @Transactional
-    public void cancelOrder(UUID orderId, User user) {
+    public void cancelOrder(UUID orderId, UUID storeId, User user) {
 
         Order order;
 
         switch(user.getRole()){
             case CUSTOMER -> order = orderRepository.findByUserIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalse(user.getId(), orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found"));
 
-            case OWNER -> order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalse(user.getStore().getId(), orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+            case OWNER -> {
+
+                if (!user.getStore().getId().equals(storeId)) {
+                    throw new UnAuthorizedException("User does not have access to this store.");
+                }
+                order = orderRepository.findByStoreIdAndOrderIdAndIsDeletedFalseAndIsCanceledFalse(storeId, orderId)
+                        .orElseThrow(() -> new OrderNotFoundException("Order not found"));
+            }
 
             case MASTER, MANAGER -> order = orderRepository.findByOrderIdAndIsDeletedFalseAndIsCanceledFalse(orderId)
-                    .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+                    .orElseThrow(() -> new OrderNotFoundException("Order not found"));
 
-            default -> throw new IllegalArgumentException("User role not recognized");
+            default -> throw new UnAuthorizedException("User role not recognized");
         }
 
         if (Duration.between(order.getCreatedAt(), LocalDateTime.now()).toMinutes() > 5) {
@@ -246,26 +320,30 @@ public class OrderService {
 
         // Product 객체 조회 로직을 추가 (예: productRepository.findById() 등)
         Product product = productRepository.findById(requestDto.getProductId())
-                .orElseThrow(() -> new IllegalArgumentException("Product not found with id: " + requestDto.getProductId()));
+                .orElseThrow(() -> new ProductNotFoundException("Product not found with id: " + requestDto.getProductId()));
 
         if(!product.getStore().getId().equals(order.getStore().getId())){
-            throw new IllegalArgumentException("Product is not in order store");
+            throw new ProductHistoryNotFoundException("Product is not in order store");
         }
 
         OrderProduct orderProduct = requestDto.toEntity(product, order);
         checkQuantity(orderProduct);
 
+        //System.out.println("여기" + productHistoryRepository.findLatestByProductId(requestDto.getProductId()).getId());
+        orderProduct.setProductHistoryId(productHistoryRepository.findLatestByProductId(requestDto.getProductId()).getId());
         orderProduct.setOrderProductId(orderProductId); // 고유한 ID 설정
+
+
         return orderProduct;
     }
 
     public void checkQuantity(OrderProduct orderProduct) {
         if(orderProduct.getOrderQuantityLimit()) {
-            throw new IllegalArgumentException("Your order quantity has exceeded your stock. Stock  : " + orderProduct.getProduct().getStockQuantity());
+            throw new OrderQuantityExceededException("Your order quantity has exceeded your stock. Stock  : " + orderProduct.getProduct().getStockQuantity());
         }
 
         if(orderProduct.getOrderLimit()) {
-            throw new IllegalArgumentException("Your order quantity has exceeded your maximum order limit. Max order limt : " + orderProduct.getProduct().getMaxOrderLimit());
+            throw new OrderQuantityExceededException("Your order quantity has exceeded your maximum order limit. Max order limt : " + orderProduct.getProduct().getMaxOrderLimit());
         }
 
         orderProduct.setProductStockQuantity();
